Fixed table headings and spacings

--- a/tps/style.css
+++ b/tps/style.css
@@ -1,5 +1,8 @@
 .tableCSS {
-	margin: 0px;
+	margin-top: 5em;
+	margin-left: 5em;
+	margin-right: 5em;
+	margin-bottom: 5em;
 	padding: 0px;
 	width: 100%;
 	border: 1px solid #000000;
@@ -15,6 +18,7 @@
 	-moz-border-radius-topleft: 0px;
 	-webkit-border-top-left-radius: 0px;
 	border-top-left-radius: 0px;
+	padding: 0px;
 }
 
 .tableCSS table {
